Fixed bug #26201 (crash in ibase_trans() on invalid link handle).